--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <div class="container">
+            <h1 id="banner">Guess the Word!</h1>
             <h1 id="test"></h1>
+            <p id="guesses-left"></p>
         </div>
         <script src="assets/javascript/game.js" async defer></script>
     </body>
