--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1 id="banner">Guess the Word!</h1>
             <h1 id="test"></h1>
-            <p id="guesses-left"></p>
+            <h1 id="guesses-left"></h1>
         </div>
         <script src="assets/javascript/game.js" async defer></script>
     </body>
