--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1 id="banner">Guess the Word!</h1>
       <h1 id="test"></h1>
       <h1 id="guesses-left"></h1>
+      <h1 id="wins"></h1>
     </div>
     <script src="assets/javascript/game.js" async defer></script>
   </body>
