--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 id="test"></h1>
       <h1 id="guesses-left"></h1>
       <h1 id="wins"></h1>
+      <h1 id="lose"></h1>
     </div>
     <script src="assets/javascript/game.js" async defer></script>
   </body>
