added function to display already guessed letters to page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1 id="banner">Guess the Word!</h1>
       <h1 id="test"></h1>
       <h1 id="guesses-left"></h1>
+      <h1 id="wrong-letter"></h1>
       <h1 id="wins"></h1>
       <h1 id="lose"></h1>
     </div>
