--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="banner">Guess the Word!</h1>
+      <h1 id="banner">Guess The Artist!</h1>
+      <img src="" id="artist-image" alt="secret-image">
       <h1 id="test"></h1>
       <h1 id="guesses-left"></h1>
       <h1 id="wrong-letter"></h1>
