added audio tag in html. fixed bug where songs would overlap when new song was guessed.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <audio src="" id="audioSrc"></audio>
       <h1 id="banner">Guess The Artist!</h1>
       <img src="" id="artist-image" alt="secret-image">
       <h1 id="test"></h1>
