updated css and changed where 'wrong input' & 'already guessed' message appears on page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Kablammo&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -16,8 +19,10 @@
       <h1 id="test"></h1>
       <h1 id="guesses-left"></h1>
       <h1 id="wrong-letter"></h1>
-      <h1 id="wins"></h1>
-      <h1 id="lose"></h1>
+      <section id="tally">
+        <h1 id="wins"></h1>
+        <h1 id="lose"></h1>
+      </section>
     </div>
     <script src="assets/javascript/game.js" async defer></script>
   </body>
