added a working reset button to reset score

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1 id="wins"></h1>
         <h1 id="lose"></h1>
       </section>
+      <button type="button">Reset</button>
     </div>
     <script src="assets/javascript/game.js" async defer></script>
   </body>
